# PythonOOPHW

./: .flake8  README.md  config.py  main.py  pyproject.toml
src/: class_abstract.py  class_module.py  miksin_module.py  utils.py
tests/: conftest.py  test_class.py  test_mixin.py
