[project]
name = "pythonoophw"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey Gordievsky",email = "agwzdushaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
black = "^25.1.0"

