[project]
name = "pythonoophw"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey Gordievsky",email = "agwzdushaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.black]
line-length = 119
exclude = '''
/(
    \.venv
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = [
    "^.venv/",
    "^.mypy_cache/",
    "^build/",
    "^dist/"
]

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.isort]
line_length = 119
skip = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/__init__.py",
    "utils.py",
    "migrations/*",
    "main.py",
    "conftest.py",
    "config.py"
]